Add FAQPage JSON-LD structured data to homepage FAQ section
- Added comprehensive FAQPage schema with all 13 Q&A pairs
- Matches the FAQ content displayed on the homepage
- Enables rich snippets for FAQ section in search results
- Improves AI system understanding of product information

--- a/index.html
+++ b/index.html
@@ -94,6 +94,120 @@
     }
     </script>
     
+    <!-- JSON-LD for FAQ Section -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Was unterscheidet das BPER System von herkömmlichen Blutdruckmessgeräten?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Im Gegensatz zu herkömmlichen Messgeräten, die nur einzelne Messungen vornehmen, bietet das BPER System eine Beat-to-Beat Messung. Dies erlaubt die Erfassung der Blutdruckschwankung II. Ordnung, indem zu jedem Herzschlag Systole und Diastole bestimmt werden. Intermittierend angewendet erlaubt es eine Überwachung über den Tag. Dies zeigt Muster und Schwankungen, die bei bisher bekannten Messungen übersehen würden, und gibt Ihnen und Ihrem Gesundheitsdienstleister ein vollständigeres Bild Ihrer Herz-Kreislauf-Gesundheit."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Werde ich sofort einen Unterschied zu einem herkömmlichen Blutdruckmessgerät bemerken?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Das hängt von Ihrem Gesundheitszustand während der Messung ab. Liegt Ihr Blutdruck gerade im normalen, stabilen Bereich, werden Sie womöglich keinen spürbaren Unterschied feststellen. Tritt jedoch auch nur eine leichte Unregelmäßigkeit auf, erfasst nur BPER die vollständige, diagnostisch relevante Druck- und Herz-Kreislauf-Kurve. Denken Sie an BPER wie an ein Pflaster oder einen Defibrillator: Solange nichts passiert, wacht es unauffällig über Sie; kommt es zu einem Ereignis, ist es das einzige mobile Blutdruckmessgerät, das den gesamten Verlauf lückenlos protokolliert."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Wie genau ist das BPER System im Vergleich zu klinischen Messungen?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Das BPER System wurde gründlich gegen klinische Geräte getestet und zeigt eine Genauigkeit innerhalb der von großen Gesundheitsorganisationen festgelegten Standards. Unsere proprietäre Sensortechnologie wurde in mehreren klinischen Studien validiert und zeigt eine außergewöhnliche Korrelation zu arteriellen Messungen."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Kann mir BPER genau sagen, was bei mir nicht stimmt?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nein. BPER ist kein Diagnosegerät – die eigentliche Diagnose darf ausschließlich von einer Ärztin oder einem Arzt gestellt werden. BPER ist ein medizinisch präzises Messinstrument für den Heimgebrauch, das verlässliche Daten liefert, auf deren Grundlage Fachpersonal eine fundierte Diagnose erstellen kann."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Benötige ich ein Rezept für den Kauf des BPER Systems?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nein, das BPER System ist ohne Rezept erhältlich. Wir empfehlen jedoch immer, Ihre Überwachungsdaten im Rahmen Ihrer gesamten Gesundheitsvorsorge mit Ihrem Gesundheitsdienstleister zu teilen."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Muss ich es den ganzen Tag tragen?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Nein. Es ist kein Wearable, sondern ein Event-Recorder."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Wie funktioniert die mobile App mit dem BPER System?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Das BPER System verbindet sich drahtlos mit unserer mobilen App (verfügbar für iOS und Android), die Ihre Echtzeit-Daten, historische Trends und personalisierte Einblicke anzeigt, wenn Sie es einstellen. Die App ermöglicht es Ihnen auch, Berichte direkt mit Ihrem Gesundheitsdienstleister zu teilen und individuelle Warnungen einzurichten."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Kann ich die Daten exportieren?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ja, als PDF, auf Wunsch auch per E-Mail direkt an Ihren Arzt."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Welche Akkulaufzeit kann ich erwarten?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ein vollständig geladener Akku erlaubt ca. 72 Messungen. Eine vollständige Aufladung dauert etwa 90 Minuten, und das Gerät kann in nur 30 Minuten auf 50% schnellgeladen werden."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Ist es für Senioren geeignet?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolut. Große Tasten, einfache Menüs (derzeit in Deutsch oder Englisch; weitere Sprachen folgen per Software-Update). Die Schriftgröße auf dem Gerät selbst entspricht medizinischen Normvorgaben und ist daher bewusst nicht maximal. Für eine komfortable Ansicht empfehlen wir, die Messwerte in der Smartphone-App abzurufen."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Kann das Gerät von mehreren Personen genutzt werden?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ja. Ein einziges BPER kann von mehreren Nutzer:innen verwendet werden – in manchen Arztpraxen oder Pflegeeinrichtungen sogar von Dutzenden gleichzeitig. Das Gerät selbst speichert lediglich Messwerte und Zeitstempel; persönliche Angaben bleiben ausschließlich auf dem jeweiligen Smartphone. Mehrere Telefone können sich mit demselben BPER koppeln, sodass jede Person ihre Daten separat verwaltet."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Sind meine Gesundheitsdaten beim BPER System sicher?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Ja, wir nehmen Datensicherheit sehr ernst. Das BPER System verwendet Ende-zu-Ende-Verschlüsselung für alle Datenübertragungen, und unsere Cloud-Speicherung entspricht HIPAA und anderen relevanten Gesundheitsdatenschutzstandards. Sie behalten stets die Kontrolle darüber, wer auf Ihre Daten zugreifen kann."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Wie lange ist die Garantiezeit für das BPER System?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Sie erhalten auf das BPER-System eine 2-jährige Herstellergarantie – inklusive Schutz bei Material- und Verarbeitungsfehlern. Auf Wunsch können Sie zusätzlichen Schutz durch unsere erweiterten Garantie- und Premium-Support-Pakete buchen."
+          }
+        }
+      ]
+    }
+    </script>
+    
     <!-- Load Stripe.js -->
     <script src="https://js.stripe.com/v3/"></script>
     <link
