Update website title and add powerful marketing positioning
- Change title from generic 'AI-Powered Business Solutions' to
  'Das weltweit erste Echtzeit-Blutdruckmessgerät für Zuhause'
- Update JSON-LD MedicalWebPage name and description to match
- Add meta description tag for better SEO
- Position as world's first real-time blood pressure monitor
- Include key benefits: Beat-to-Beat, clinical validation, pricing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BPER System - AI-Powered Business Solutions</title>
+    <meta name="description" content="Das weltweit erste Echtzeit-Blutdruckmessgerät für Zuhause. Beat-to-Beat Messung zu jedem Herzschlag. Klinisch validiert, präzise Überwachung, 259€." />
+    <title>BPER System - Das weltweit erste Echtzeit-Blutdruckmessgerät für Zuhause</title>
     
     <!-- JSON Feed Discovery -->
     <link rel="alternate" type="application/feed+json" title="BPER Medical - Gesundheitstipps und Updates" href="/feed.json" />
@@ -36,8 +37,8 @@
           "@type": "MedicalWebPage",
           "@id": "https://bper.me/#webpage",
           "url": "https://bper.me",
-          "name": "BPER System - Präzise Blutdruckmessung für Ihre Gesundheit",
-          "description": "Entdecken Sie das BPER System - die neue Generation der Blutdruckmessung mit fortschrittlicher Technologie für genaue und zuverlässige Ergebnisse.",
+          "name": "BPER System - Das weltweit erste Echtzeit-Blutdruckmessgerät für Zuhause",
+          "description": "Entdecken Sie das weltweit erste Echtzeit-Blutdruckmessgerät für Zuhause. Beat-to-Beat Messung zu jedem Herzschlag für präzise Gesundheitsüberwachung.",
           "inLanguage": "de-DE",
           "isPartOf": {
             "@id": "https://bper.me/#website"
